<resources>
    <string name="app_name">Cupcake Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flav_chocolate">Chocolate</string>
    <string name="flav_vanilla">Vanilla</string>
    <string name="flav_strawberry">Strawberry</string>
    <string name="flav_lemon">Lemon</string>
    <string name="flav_orange">Orange</string>
    <string name="flav_gems">Party Mix</string>
    <string name="flav_cherry">Cherry</string>
    <string name="flav_board_flavour">Flavour : %s</string>
    <string name="flav_board_cost">Cost : ₹ %s</string>
    <string name="flav_board_qty">Qty : %s</string>
    <string name="subTotal">Subtotal : ₹ %s</string>
    <string name="flav_board_txt">Flavour : %s\nCost : ₹ %f\nSubtotal : ₹ %f</string>

    <plurals name="cupcake_quantites">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>

    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total ₹ %s</string>
    <string name="cupcake_order">New Cupcake Order</string>

    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \nTotal: ₹ %4$s \n\n Thank you!</string>


</resources>