<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.smartphone_codes.cupcakeshop.model.OrderViewModel" />

        <variable
            name="fragmentSummary"
            type="com.smartphone_codes.cupcakeshop.mainActivityFragments.FragmentSummary" />

    </data>




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        tools:context=".mainActivityFragments.FragmentSummary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/side_margin">

                <!-- Group the order details into a single ViewGroup and set focusable = true,
                     so all fields will be read aloud together by the accessibility service -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/summary_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="@color/dark"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/serve_tray2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/summareCakePreview"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            app:imageResource="@{viewModel.flavourPreview}"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                            app:layout_constraintEnd_toEndOf="@+id/imageView3"
                            app:layout_constraintStart_toStartOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="@+id/imageView3" />

                        <TextView
                            android:id="@+id/quantity_label"
                            style="@style/Widget.Cupcake.TextView.OrderSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/quantity"
                            android:textAllCaps="true"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/divider1"
                            app:layout_constraintTop_toBottomOf="@id/divider1" />

                        <TextView
                            android:id="@+id/quantity"
                            style="@style/Widget.Cupcake.TextView.OrderSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@{viewModel.quantity.toString()}"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/quantity_label"
                            app:layout_constraintTop_toBottomOf="@+id/quantity_label" />

                        <View
                            android:id="@+id/divider1"
                            style="@style/Widget.Cupcake.Divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="#000000"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                        <TextView
                            android:id="@+id/flavor_label"
                            style="@style/Widget.Cupcake.TextView.Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/flavor"
                            android:textColor="#FFFFFF"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="@+id/summareCakePreview" />

                        <TextView
                            android:id="@+id/flavor"
                            style="@style/Widget.Cupcake.TextView.OrderSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@{viewModel.flavour}"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/flavor_label"
                            app:layout_constraintTop_toBottomOf="@+id/flavor_label" />

                        <View
                            android:id="@+id/divider2"
                            style="@style/Widget.Cupcake.Divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:background="#000000"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/quantity" />

                        <TextView
                            android:id="@+id/pickup_label"
                            style="@style/Widget.Cupcake.TextView.Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/pickup_date"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            app:layout_constraintLeft_toLeftOf="@id/divider2"
                            app:layout_constraintStart_toStartOf="@+id/quantity_label"
                            app:layout_constraintTop_toBottomOf="@id/divider2" />

                        <TextView
                            android:id="@+id/date"
                            style="@style/Widget.Cupcake.TextView.OrderSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@{viewModel.date.toString()}"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            tools:text="Monday"
                            app:layout_constraintLeft_toLeftOf="@id/pickup_label"
                            app:layout_constraintTop_toBottomOf="@id/pickup_label" />

                        <View
                            android:id="@+id/divider3"
                            style="@style/Widget.Cupcake.Divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:background="#000000"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/date" />

                        <TextView
                            android:id="@+id/total"
                            style="@style/Widget.Cupcake.TextView.FinalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@{@string/total_price(viewModel.totalPrice)}"
                            android:textColor="#FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="@id/divider3"
                            app:layout_constraintTop_toBottomOf="@id/divider3" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="45dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/summary_card">

                    <Button
                        android:id="@+id/send_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/ubuntu_light"
                        android:onClick="@{()->fragmentSummary.sendOrder()}"
                        android:text="Place Order"
                        android:textAllCaps="false"
                        app:backgroundTint="#FFC529"
                        app:cornerRadius="30dp" />

                    <Button
                        android:id="@+id/cancel_order"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/ubuntu_light"
                        android:onClick="@{()->fragmentSummary.cancelOrder()}"
                        android:text="Cancel Order"
                        android:textAllCaps="false"
                        android:textColor="#B71C1C"
                        app:cornerRadius="30dp"
                        app:rippleColor="#ABFF8282"
                        app:strokeColor="#B71C1C" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </FrameLayout>


</layout>